[package]
name = "warpy"
version = "0.2.1"
edition = "2021"
authors = ["Mihai Galos <mihaigalos@gmail.com>"]
description = "🌀 A thin warp wrapper for serving folders over http."
categories = [
    "command-line-utilities",
    "network-programming",
    "web-programming::http-server"
]
keywords = [
    "cli",
    "download",
    "resume",
]
repository = "https://github.com/mihaigalos/warpy"
license = "MIT"

[dependencies]
build_html = "2.0.0"
chrono = "0.4.19"
env_logger = "0.8.4"
local_ipaddress = "0.1.3"
log = "0.4.17"
rcgen = "0.9.2"
structopt = "0.3.23"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread", "signal"] }
warp = { version = "0.3.2", features = ["tls"] }

[profile.release]
lto = true
