[package]
name = "warpy"
version = "0.3.7"
edition = "2021"
authors = ["Mihai Galos <mihaigalos@gmail.com>"]
description = "🌀 A thin warp wrapper for serving folders over http."
categories = [
    "command-line-utilities",
    "network-programming",
    "web-programming::http-server"
]
keywords = [
    "cli",
    "download",
    "resume",
]
repository = "https://github.com/mihaigalos/warpy"
license = "MIT"

[dependencies]
build_html = "2.3.0"
chrono = "0.4.23"
env_logger = "0.10.0"
local_ipaddress = "0.1.3"
log = "0.4.17"
qr2term = "0.3.1"
rcgen = "0.10.0"
structopt = "0.3.26"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "signal"] }
warp = { version = "0.3.3", features = ["tls"] }

[profile.release]
lto = true
