[package]
name = "warpy"
version = "0.3.34"
edition = "2021"
authors = ["Mihai Galos <mihaigalos@gmail.com>"]
description = "🌀 A thin warp wrapper for serving folders over http."
categories = [
    "command-line-utilities",
    "network-programming",
    "web-programming::http-server"
]
keywords = [
    "cli",
    "download",
    "resume",
]
repository = "https://github.com/mihaigalos/warpy"
license = "MIT"

[dependencies]
build_html = "2.4.0"
chrono = "0.4.31"
env_logger = "0.10.1"
local_ipaddress = "0.1.3"
log = "0.4.20"
qr2term = "0.3.1"
rcgen = "0.11.3"
structopt = "0.3.26"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "signal"] }
warp = { version = "0.3.6", features = ["tls"] }

[profile.release]
lto = true
